--- a/starfield.css
+++ b/starfield.css
@@ -7,3 +7,13 @@ body, html {
   overflow: hidden;
   background-color: black;
 }
+
+canvas {
+  position: absolute;
+}
+#canvas1 {
+  z-index: 1;
+}
+#canvas2 {
+  z-index: 2;
+}
